k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation
  labels:
    app.kubernetes.io/name: recommendation
    app.kubernetes.io/managed-by: kubectl
