k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-api-svc
  namespace: recommendation
  labels:
    app: recommendation-api
spec:
  type: ClusterIP
  selector:
    app: recommendation-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
